--- a/slidev/package.json
+++ b/slidev/package.json
@@ -11,6 +11,7 @@
     "@slidev/cli": "^51.6.2",
     "@slidev/theme-default": "latest",
     "@slidev/theme-seriph": "latest",
+    "slidev-theme-neversink": "^0.3.6",
     "vue": "^3.5.14"
   }
 }
