--- a/slidev/package.json
+++ b/slidev/package.json
@@ -13,5 +13,8 @@
     "@slidev/theme-seriph": "latest",
     "slidev-theme-neversink": "^0.3.6",
     "vue": "^3.5.14"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.52.0"
   }
 }
